--- a/screen.html
+++ b/screen.html
@@ -10,15 +10,12 @@
 
 .enemy {
   color: red;
+  background-color: rgba(255, 0, 0, 0.1);
 }
 
 .friendly {
   color: blue;
-}
-
-.zone {
-  border: 1px solid;
-  color: green;
+  background-color: rgba(0, 0, 255, 0.1);
 }
 </style>
 <div id=canvas>
