--- a/screen.html
+++ b/screen.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <style>
+html {
+  background-color: #bef67a;
+}
 .tank {
   position: absolute;
   margin: -12px 0 0 -16px;
@@ -9,13 +12,13 @@
 }
 
 .enemy {
-  color: red;
-  background-color: rgba(255, 0, 0, 0.1);
+  color: #ba000d;
+  background-color: #f44336;
 }
 
 .friendly {
-  color: blue;
-  background-color: rgba(0, 0, 255, 0.1);
+  color: #007ac1;
+  background-color: #2196f3;
 }
 </style>
 <div id=canvas>
